...
                android:text="+ Dodaj novog člana"
                android:backgroundTint="@color/primary"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
...
